--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</style>
 </head>
 <body>
-	<p><span><b>Степан Андрійович Бандера</b></span> <i><sub>(1 січня 1909, с. Старий Угринів, нині Калуського району, Івано-Франківська область, <a href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0">Україна</a> — 15 жовтня 1959, Мюнхен, Баварія, ФРН)</sub></i> — український політичний діяч, один із чільних ідеологів і теоретиків українського націоналістичного руху XX століття, після розколу Організації українських націоналістів — голова Проводу ОУН-Б. <img width="10%" height="10%" alt="Батько наш Бандера" src="D:\Программирование\Занятия\Homework_from_ProCode\Бандера\447719.jpg"><br>
+	<p><span><b>Степан Андрійович Бандера</b></span> <i><sub>(1 січня 1909, с. Старий Угринів, нині Калуського району, Івано-Франківська область, <a href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0">Україна</a> — 15 жовтня 1959, Мюнхен, Баварія, ФРН)</sub></i> — український політичний діяч, один із чільних ідеологів і теоретиків українського націоналістичного руху XX століття, після розколу Організації українських націоналістів — голова Проводу ОУН-Б. <img width="10%" height="10%" alt="Батько наш Бандера" src="./images/447719.jpg"><br>
 
 Як активний діяч УВО та ОУН має законодавчо визначений статус Борець за незалежність України у ХХ сторіччі. Вважається національним героєм України.<br>
 
