--- a/index.html
+++ b/index.html
@@ -1,24 +1,10 @@
 <!DOCTYPE html>
+<html>
 <head>
-	<style>
-		img {
-			float: right; margin: 0 0 [x] [y];
-		}
-
-		p {
-			font-size: 25px;
-			font-family: cursive;
-		}
-
-		span:hover {
-			color:fuchsia;
-		}
-	
-		a:hover {
-			color: rgb(1, 165, 165);
-		}
-
-	</style>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="./style/main.css">
+	<title>It was hard</title>
 </head>
 <body>
 	<p><span><b>Степан Андрійович Бандера</b></span> <i><sub>(1 січня 1909, с. Старий Угринів, нині Калуського району, Івано-Франківська область, <a href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0">Україна</a> — 15 жовтня 1959, Мюнхен, Баварія, ФРН)</sub></i> — український політичний діяч, один із чільних ідеологів і теоретиків українського націоналістичного руху XX століття, після розколу Організації українських націоналістів — голова Проводу ОУН-Б. <img width="10%" height="10%" alt="Батько наш Бандера" src="./images/447719.jpg"><br>
@@ -31,3 +17,4 @@
 
 Оцінки Степана Бандери вкрай суперечні. Після розпаду СРСР для багатьох українців його ім'я стало символом боротьби за незалежність України. Натомість, багато мешканців Польщі та Росії ставляться до нього вкрай негативно, звинувачуючи у фашизмі, тероризмі, радикальному націоналізмі, що зокрема виявлялось у фізичній ліквідації лідерів відмінних від ОУН(б) українських націоналістичних течій, і колабораціонізмі. Визначення <a href="https://uk.wikipedia.org/wiki/%D0%91%D0%B0%D0%BD%D0%B4%D0%B5%D1%80%D1%96%D0%B2%D1%86%D1%96">«бандерівці»</a>, похідне від його прізвища, поступово стало загальним і застосовним до всіх українських націоналістів, незалежно від їхнього ставлення до Бандери</p>
 </body>
+</html>
